# const_guards

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: lib.rs
src/attribute/: Cargo.toml
src/attribute/src/: lib.rs
src/const_guards_attribute/: Cargo.toml
src/const_guards_attribute/src/: lib.rs
tests/: main.rs
tests/fail/: fn.rs  fn.stderr
tests/pass/: associated_type.rs  enum.rs  expr.rs  fn.rs  head.rs  impl.rs  poly_block.rs  struct.rs  trait_fn.rs
