[workspace]
members = [
  "src/attribute",
]

[package]
authors = ["Marius Weidner <cargo@mariusweidner.de>"]
categories = ["development-tools "]
description = "An attribute macro for compile time constraints on const generics"
edition = "2021"
keywords = ["const", "generics"]
license = "MIT"
name = "const_guards"
readme = "README.md"
repository = "https://github.com/Mari-W/const_guards"
version = "0.1.0"

[dependencies]
attribute = {path = "src/attribute"}

[dev-dependencies]
trybuild = "1.0.61"

[[test]]
harness = false
name = "tests"
path = "tests/main.rs"
