[workspace]
members = [
  "src/const_guards_attribute",
]

[package]
authors = ["Marius Weidner <const_guards@mariusweidner.de>"]
categories = ["development-tools"]
description = "An attribute macro for compile time constraints on const generics"
documentation = "https://docs.rs/const_guards"
edition = "2021"
homepage = "https://github.com/Mari-W/const_guards"
keywords = ["const", "generics"]
license = "MIT"
name = "const_guards"
readme = "README.md"
repository = "https://github.com/Mari-W/const_guards"
version = "0.1.1"

[dependencies]
const_guards_attribute = {path = "src/const_guards_attribute", version = "0.1.0"}

[dev-dependencies]
trybuild = "1.0.61"

[[test]]
harness = false
name = "tests"
path = "tests/main.rs"