[package]
authors = ["Marius Weidner <const_guards@mariusweidner.de>"]
categories = ["development-tools "]
description = "An attribute macro for compile time constraints on const generics"
documentation = "https://docs.rs/const_guards"
edition = "2021"
homepage = "https://github.com/Mari-W/const_guards"
keywords = ["const", "generics"]
license = "MIT"
name = "const_guards_attribute"
readme = "README.md"
repository = "https://github.com/Mari-W/const_guards"
version = "0.1.0"

[dependencies]
derive-syn-parse = "0.1.5"
proc-macro2 = "1.0.37"
quote = "1.0.18"
syn = {version = "1.0.92", features = ["full"]}

[lib]
proc-macro = true